--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,7 +1,3 @@
-/*
-  This file contains all declarations of variables, utility classes, and some global styles.
-*/
-
 * {
   margin: 0;
   padding: 0;
@@ -11,6 +7,10 @@
 :root {
   --accent-color: #26335d;
   --text: #fcfcfd;
-  --red: #e74040;
   --orange: #ff7b52;
+}
+
+@font-face {
+  font-family: "Noto Sans";
+  src: url("../fonts/NotoSans.ttf") format("truetype");
 }
